2006-11-15    <tino@firebird.03.softkill.net>

	* slist.h (tino_glist_destroy, tino_slist_free)
	(tino_slist_iterate, tino_slist_iterate_0): NULL lists are now
	ignored

2006-11-13    <tino@firebird.03.softkill.net>

	* filetool.h (TINO_DRIVE_SEP_CHAR, TINO_PATH_SEP_CHAR): prefixed
	with TINO_

2006-11-10    <tino@firebird.03.softkill.net>

	* Makefile.proto (Makefile): added to replace - in filenames by _

	* strprintf.h (tino_str_vprintf_null): bug fixed due to new
	TINO_VA_LIST

	* arg.h: need stdio to compile for some reason

2006-10-28    <tino@geht.net>

	* md5.h (tino_md5_bin): added

	* data.h: pos, size, seek and intr added
	(tino_data_read_all): added

2006-10-15    <tino@firebird.03.softkill.net>

	* md5.h (tino_md5_hex, tino_md5_buf, tino_md5_string): added

	* file.h (tino_file_chdir): added

	* buf_printf.h (tino_buf_add_vsprintf): now uses tino_vsnprintf

	* strprintf.h (tino_str_vprintf_null): now uses tino_vsnprintf

	* ex.h (tino_verror_std): now uses tino_vprintf

	* arg.h (tino_vfprintf, tino_vsnprintf): added

2006-10-14    <tino@firebird.03.softkill.net>

	* filetool.h (tino_file_gluebuffer): max now can be NULL
	(tino_file_realpath): added

2006-10-04    <tino@firebird.03.softkill.net>

	* main.h, hup.h, sock.h: tino_va_* routines instead of va_*

	* fatal.h, ex.h: changed to tino_va_* routines instead of va_*
	routines

	* Makefile (distclean), Makefile.proto (distclean): cleaning of
	old versioned files (.#*), too

	* arg.h: replacement for stdarg.h, as this is not compatible
	between some different implementations

	* sysfix.h: now in arg.h

2006-10-03    <tino@firebird.03.softkill.net>

	* md5.h (tino_MD5Update): function prototype make more compatible

	* getopt.h (tino_getopt_var_set_arg_imp): warning about possibly
	uninitialized variable removed.
	(tino_getopt_arg): cast of ptrdiff_t to int needed
	
	* codec.h (tino_dec_hex): GCC in Ubuntu is a little bit picky
	about casts in lvalues.
